--- a/.gitignore
+++ b/.gitignore
@@ -26,5 +26,11 @@ target/
 .idea/
 *.iml
 
+#text
+.gitignore
+HELP.md
+mvnw
+mvnw.cmd
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
