--- a/springboot03web/src/main/resources/application.yaml
+++ b/springboot03web/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
 
   #国际化默认
   messages:
-    basename: i18n.login
+    basename: i18n/login
   mvc:
     format:
       date-time: yyyy-MM-dd HH:mm:ss
